@@ -1,4 +1,8 @@
 2011-09-21 gabriel.oliveira
+* Verticalize 'menu-create' list options
+* Fix 'select-language' item decoration
+
+2011-09-21 gabriel.oliveira
 * Improve 'select language' list layout
 
 2011-09-21 gabriel.oliveira
